test/resources/parser/failing/ExtLambdaError0.scala
object LambdaError {
  val f: Int => Int = (\(x: Int): Int -> val y: 1; x + y);
  Std.printInt(f(1))
}
